fix: map render and zoom on mobile

--- a/components/MapChart/MapChartHeader/MapChartHeader.module.scss
+++ b/components/MapChart/MapChartHeader/MapChartHeader.module.scss
@@ -10,7 +10,7 @@
   &__map {
     position: relative;
     display: block;
-    height: 50vh;
+    height: 25vh;
 
     @media (min-width: 1024px) {
       height: 70vh;
